<resources>
    <string name="app_name">Burger Queen</string>

    <string name="pay">PAY</string>
    <string name="cancel">Cancel</string>

    <string name="menu">Menu</string>
    <string name="user_profile">User profile</string>
    <string name="order_summary">Order summary</string>
    <string name="restaurant">Restaurant</string>
    <string name="payment_method">Payment method</string>
    <string name="user_order_history">Order history</string>
    <string name="edit_user_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="fab_description">Go to cart</string>
    <string name="no_data_error_message">No data</string>

    <string name="log_in_phone_action">Log In with phone</string>
    <string name="log_in_email_action">Log In with email</string>
    <string name="log_in_google_action">Log in with Google</string>
    <string name="clear_order_history_action">Clear order history</string>
    <string name="place_order_action">Place order</string>
    <string name="user_id_text">User ID:</string>
    <string name="user_email_text">Email:</string>
    <string name="user_password_text">Password:</string>
    <string name="enter_password_hint">Enter new password</string>
    <string name="pasword_input_error">Password must be at least 6 characters long</string>

    <string name="done_button">Done</string>

    <string name="placeholder_text">placeholder text</string>
    <string name="order_total">Total</string>
    <string name="order_status">Status</string>
    <string name="manage_account">Manage account</string>
    <string name="with_card">With card in app</string>
    <string name="with_cash">Cash</string>
    <string name="log_out_action">Log out</string>
    <string name="ingredients">Ingredients:</string>
    <string name="calories">Calories:</string>
    <string name="total_fat">Total Fat:</string>
    <string name="total_carbs">Total Carbs:</string>
    <string name="protein">Protein:</string>
    <string name="empty_order_history_message">Order history is empty</string>

</resources>