<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:text="@string/app_name"
        android:textAppearance="@style/FastFoodApp.TextAppearance.WelcomeScreen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_in_google_button"
        app:cornerRadius="@dimen/button_rounded_corners_radius"
        android:layout_width="match_parent"
        android:layout_height="@dimen/welcome_screen_button_height"
        android:layout_marginStart="@dimen/welcome_screen_side_margin"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="@dimen/welcome_screen_side_margin"
        android:text="@string/log_in_google_action" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_in_email_button"
        app:cornerRadius="@dimen/button_rounded_corners_radius"
        android:layout_width="match_parent"
        android:layout_height="@dimen/welcome_screen_button_height"
        android:layout_marginStart="@dimen/welcome_screen_side_margin"
        android:layout_marginEnd="@dimen/welcome_screen_side_margin"
        android:backgroundTint="@color/fastfoodapp_red"
        android:text="@string/log_in_email_action" />

</LinearLayout>
