<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.fastfoodapp.orderdetails.OrderDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                android:textAppearance="@style/FastFoodApp.TextAppearance.Big.Black"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_restaurant_button"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_round_arrow_forward_24"
                app:iconGravity="end"
                app:iconTint="@color/fastfoodapp_gray"
                app:rippleColor="@color/fastfoodapp_gray"
                app:strokeColor="@color/fastfoodapp_border_gray"
                app:strokeWidth="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:stateListAnimator="@null"
                android:text="@{viewModel.mSelectedRestaurantName}"
                android:textAlignment="textStart"
                android:textAppearance="@style/FastFoodApp.TextAppearance.Big.Black"
                android:textColor="@color/black"
                android:onClick="@{() -> viewModel.selectRestaurant()}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:textAppearance="@style/FastFoodApp.TextAppearance.Big.Black"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_payment_method"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_round_arrow_forward_24"
                app:iconGravity="end"
                app:iconTint="@color/fastfoodapp_gray"
                app:rippleColor="@color/fastfoodapp_gray"
                app:strokeColor="@color/fastfoodapp_border_gray"
                app:strokeWidth="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:stateListAnimator="@null"
                android:text="@{viewModel.mSelectedPaymentMethodName}"
                android:textAlignment="textStart"
                android:textAppearance="@style/FastFoodApp.TextAppearance.Big.Black"
                android:textColor="@color/black"
                android:onClick="@{() -> viewModel.selectPaymentMethod()}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@{viewModel.mTotalPrice}"
                android:textAppearance="@style/FastFoodApp.TextAppearance.Huge.Bold"/>

            <com.google.android.material.button.MaterialButton
                app:cornerRadius="@dimen/button_rounded_corners_radius"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/welcome_screen_button_height"
                android:backgroundTint="@color/fastfoodapp_red"
                android:text="@string/place_order_action"
                android:textAllCaps="false"
                android:textAppearance="@style/FastFoodApp.TextAppearance.Big"
                android:onClick="@{() -> viewModel.pay()}"/>

        </LinearLayout>

    </LinearLayout>

</layout>